# boxcore

./: .cproject  .hgignore  .project  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  _boxCoreDocs.h  astyle  bb4win64.kdevelop  license.txt  setup_cross.sh  setup_cross32.sh  setup_cross64.sh  stylesheet.css
bbKeys/: BBKeys.cpp  CMakeLists.txt
bbLeanBar/: CMakeLists.txt  bbLeanBar.cpp  bbLeanClasses.cpp
blackbox/: BB.h  BBApi.cpp  BBApi.cpp.orig  BBApi.h  BBApiInternal.h  BBRoot.cpp  BBSendData.h  BBVWM.cpp  BImage.cpp  BImage.h  BlackBox.cbp  Blackbox.cpp  CMakeLists.txt  ConfigMenu.cpp  Desk.cpp  DesktopMenu.cpp  Install.cpp  MessageManager.cpp  Pidl.cpp  Pidl.h  PluginManager.cpp  PluginManager.h  Settings.cpp  Settings.h  Stylestruct.h  Tinylist.cpp  Tinylist.h  Toolbar.cpp  Tray.cpp  Tray.cpp.orig  Tray.h  Utils.cpp  VolumeControl.cpp  VolumeControl.h  Workspaces.cpp  Workspaces.h  bbLean_antifreeze_shellserviceobjects.patch  bbLean_antifreeze_syscommands.patch  blackbox.exe.manifest  callbacks.cpp  (+21 more)
blackbox/.svn/: entries
blackbox/.svn/text-base/: BB.h.svn-base  BBApiEx.h.svn-base  BBSendData.h.svn-base  BBVWM.cpp.orig.svn-base  BBVWM.cpp.svn-base  BImage.cpp.svn-base  BlackBox.depend.svn-base  Blackbox.cpp.svn-base  Install.cpp.svn-base  PluginManager.cpp.svn-base  Settings.h.svn-base  Stylestruct.h.svn-base  Utils.cpp.svn-base  VolumeControl.cpp.svn-base  Workspaces.cpp.orig.svn-base  bbLean_antifreeze_reschange.patch.svn-base  bbLean_antifreeze_workspace.patch.svn-base  m_alloc.cpp.svn-base  m_alloc.h.svn-base  resource.rc.svn-base
blackbox/Menu/: CommandItem.cpp  Contextmenu.cpp  Dragsource.cpp  DrawIco.cpp  Droptarget.cpp  FolderItem.cpp  Menu.cpp  Menu.h  MenuItem.cpp  MenuMaker.cpp  SpecialFolder.cpp  TitleItem.cpp
blackbox/Menu/.svn/: entries
blackbox/config/: blackbox.rc  extensions.rc  menu.rc  menubb.rc  plugins.rc  stickywindows.ini
blackbox/hooks/: TrayForwarder.cpp
blackbox/shellserviceobjects/: CMakeLists.txt  clsClsidSources.cpp  clsClsidSources.h  clsShellServiceObjects.cpp  clsShellServiceObjects.h  guidSources.cpp  guidSources.h  shellServiceObjects.cpp  shellServiceObjects.h
blackbox/shellservices/: CMakeLists.txt  ServiceArgs.h  clsAppbarHandler.cpp  clsAppbarHandler.h  clsAppbarSrv.cpp  clsAppbarSrv.h  clsLegacyNotificationIcon.cpp  clsLegacyNotificationIcon.h  clsNotificationIcon.cpp  clsNotifyIconHandler.cpp  clsNotifyIconHandler.h  clsNotifyIconRectHandler.cpp  clsNotifyIconRectHandler.h  clsNotifyIconRectSrv.cpp  clsNotifyIconRectSrv.h  clsNotifyIconSrv.cpp  clsNotifyIconSrv.h  clsService.cpp  clsService.h  clsServiceManager.cpp  clsServiceManager.h  clsServiceRegistrar.cpp  clsServiceRegistrar.h  clsShellServiceHandler.h  clsShellServiceObjectsSrv.cpp  clsShellServiceObjectsSrv.h  clsShellServiceWindow.cpp  clsShellServiceWindow.h  clsShellTrayWndSrv.cpp  clsShellTrayWndSrv.h  clsStartupSrv.cpp  clsStartupSrv.h  hash.cpp  hash.h
blackbox/systemtray/: CMakeLists.txt  clsAppbarHandler.cpp  clsLegacyNotificationIcon.h  clsNotificationIcon.cpp  clsNotificationIcon.h  clsNotifyIconHandler.cpp  clsNotifyIconHandler.h  clsShellServiceHandler.h  clsShellServiceWindow.cpp  clsShellServiceWindow.h  clsSystemTray.cpp  clsSystemTray.h  clsTrayItem.cpp  clsTrayItem.h  nid.h
blackbox/tasks/: CMakeLists.txt  clsLegacyTask.cpp  clsLegacyTask.h  clsTask.cpp  clsTask.h  clsTaskManager.cpp  clsTaskManager.h  clsTaskManagerInterface.cpp  clsTaskManagerInterface.h  helpers.cpp  helpers.h
blackbox/vwm/: CMakeLists.txt  clsBBVWM.cpp  clsBBVWM.h  clsNullVWM.cpp  clsNullVWM.h  clsVWMInterface.h
boxBar/: CMakeLists.txt  (+27 more)
coreplugins/bbKeys/: BBKeys.cpp  CMakeLists.txt  winkeyhook.cpp
coreplugins/bbKeys/config/: bbKeys.rc
coreplugins/bbLeanBar/: BuffBmp.cpp  CMakeLists.txt  DrawIco.cpp  SysMenu.cpp  TinyDropTarg.cpp  Tooltips.cpp  Utils.cpp  bartender.cpp  bbLeanBar.cpp  bbLeanClasses.cpp
coreplugins/bbLeanBar/config/: bbLeanBar.rc
coreplugins/bbLeanBar/extenders/: barextender.h
coreplugins/boxBar/: CMakeLists.txt  CPackConfig.cmake.in  _boxBarDocs.h  boxBar.cpp  clsBar.cpp  clsBar.h  clsBoxBar.cpp  clsBoxBar.h  clsButton.cpp  clsButton.h  clsClock.cpp  clsClock.h  clsClockItem.cpp  clsClockItem.h  clsCollection.cpp  clsCollection.h  clsDropTarget.cpp  clsDropTarget.h  clsFlexiSpacer.cpp  clsFlexiSpacer.h  clsIcon.cpp  clsIcon.h  clsIconItem.cpp  clsIconItem.h  clsItButton.cpp  clsItButton.h  clsItem.cpp  clsItem.h  clsItemCollection.cpp  clsItemCollection.h  clsLabel.cpp  clsLabel.h  clsLabelItem.cpp  clsLabelItem.h  clsSettingsManager.cpp  clsSettingsManager.h  clsStyle.cpp  clsStyle.h  clsTask.cpp  clsTask.h  (+21 more)
coreplugins/boxBar/config/: boxBar.rc
coreplugins/boxBar/rcworker/: clsRCBool.cpp  clsRCBool.h  clsRCConditional.cpp  clsRCConditional.h  clsRCInt.cpp  clsRCInt.h  clsRCWorker.cpp  clsRCWorker.h
plugins/bbDeskMinimize/: CMakeLists.txt  bbDeskMinimize.cpp
plugins/bbInterface/: AgentMaster.cpp  AgentMaster.h  AgentType_Bitmap.cpp  AgentType_Broam.cpp  AgentType_CompoundText.cpp  AgentType_Graph.cpp  AgentType_Mixer.cpp  AgentType_Run.cpp  AgentType_StaticText.cpp  AgentType_SwitchedState.cpp  AgentType_System.cpp  AgentType_SystemMonitor.cpp  AgentType_SystemMonitor.h  AgentType_TGA.cpp  AgentType_Winamp.cpp  BBApiInternal.h  CMakeLists.txt  ConfigMaster.cpp  ControlMaster.cpp  ControlMaster.h  ControlType_Button.cpp  ControlType_Button.h  ControlType_Label.cpp  ControlType_Slider.cpp  Definitions.h  DialogMaster.cpp  ListMaster.cpp  MenuMaster.cpp  MessageMaster.cpp  ModuleMaster.cpp  PluginMaster.cpp  PluginMaster.h  SlitManager.cpp  SnapWindow.cpp  StyleMaster.cpp  StyleMaster.h  Tooltip.cpp  WindowMaster.cpp  WindowMaster.h  makefile-vctk
plugins/bbInterface/config/: BBInterface.rc
plugins/bbLeanBar/: CMakeLists.txt  Tooltips.cpp  bartender.cpp  bbLeanBar.cbp  bbLeanBar.cpp  bbLeanClasses.cpp  makefile
plugins/bbLeanBar/.svn/: entries
plugins/bbLeanSkin/: CMakeLists.txt  bbLeanSkin.cbp  bbLeanSkin.cpp  makefile
plugins/bbLeanSkinNew/: CMakeLists.txt  tempfile
plugins/boxVolume/: CMakeLists.txt  boxVolume.cpp
(+86 files in other folders)
